--- a/openswWebSoftware/Week 13/Task 13-2.html
+++ b/openswWebSoftware/Week 13/Task 13-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQuery Practice</title>
+    <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         #info {
